test_src/compiler_errors/types/boolean/DoWhileNumberError.b
class DoWhileNumberError {
    void test() {
        var i = 0;
        do {
            println(i);
            i--;
        }
        while (i);
    }
}
